@@ -119,7 +119,10 @@ var errorSchema = `{
       "argv": {
         "description": "Command line arguments used to start this process",
         "type": ["array", "null"],
-        "minItems": 0
+        "minItems": 0,
+        "items": {
+           "type": "string"
+        }
     }
   },
   "required": ["pid"]
@@ -387,12 +390,18 @@ var errorSchema = `{
         "post_context": {
             "description": "The lines of code after the stack frame",
             "type": ["array", "null"],
-            "minItems": 0
+            "minItems": 0,
+            "items": {
+                "type": "string"
+            }
         },
         "pre_context": {
             "description": "The lines of code before the stack frame",
-             "type": ["array", "null"],
-            "minItems": 0
+            "type": ["array", "null"],
+            "minItems": 0,
+            "items": {
+                "type": "string"
+            }
         },
         "vars": {
             "description": "Local variables for this stack frame",
@@ -491,12 +500,18 @@ var errorSchema = `{
         "post_context": {
             "description": "The lines of code after the stack frame",
             "type": ["array", "null"],
-            "minItems": 0
+            "minItems": 0,
+            "items": {
+                "type": "string"
+            }
         },
         "pre_context": {
             "description": "The lines of code before the stack frame",
-             "type": ["array", "null"],
-            "minItems": 0
+            "type": ["array", "null"],
+            "minItems": 0,
+            "items": {
+                "type": "string"
+            }
         },
         "vars": {
             "description": "Local variables for this stack frame",
