@@ -13,6 +13,8 @@ https://github.com/elastic/apm-server/compare/4daa36bd5c144cf9182afc62dc8042af66
 ==== Bug fixes
 
 - Accept charset in request's content type {pull}677[677].
+- Use type integer instead of number in JSON schemas where applicable {pull}641[641].
+- Set array item types to string in JSON schemas {pull}651[651].
 
 ==== Added
 
@@ -43,7 +45,6 @@ https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828
 - Updated readme doc urls {pull}356[356]
 - Use updated stack trace frame values for calculating error `grouping_keys` {pull}485[485]
 - Fix panic when a signal is delivered before the server is instantiated {pull}580[580]
-- Use type integer instead of number in JSON schemas where applicable {pull}641[641]
 
 ==== Added
 - Include build time and revision in version information {pull}396[396]
